--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
+body {
+  padding: 50px 80px;
   text-align: center;
+  background-color: #7acae0;
+}
+.section {
+  padding: 100px 20px;
 }
 
-.App-logo {
-  height: 40vmin;
+.container {
+  max-width: 400px;
+  margin: 0 auto;
+  background-color: #fff;
+  padding: 50px 80px;
+  box-shadow: 0 23px 17px -5px rgba(50, 50, 93, 0.25), 0 8px 16px -8px rgba(0, 0, 0, 0.3);
+  margin-bottom: 40px;
+}
+
+.shapes {
+  transform: skewY(-12deg);
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0%;
+  opacity: 0.7;
+}
+
+.shape-one {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 5%;
+  background-color: #065fd4;
+  width: 100%;
+  height: 80px;
+}
+
+.shape-two {
+  position: absolute;
+  top: 180px;
+  left: 5%;
+  right: 90%;
+  background-color: #4212aa;
+  width: 100%;
+  height: 80px;
+}
+
+.shape-three {
+  position: absolute;
+  top: 260px;
+  left: 10%;
+  right: 0%;
+  background-color: #065fd4;
+  width: 100%;
+  height: 80px;
+}
+
+.StripeGrid {
+  --stripe-height: 48px;
+  --content-columns: 12;
+  --gutter-columns: 4;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.Flx {
+  background-color: #7acae0;
+  padding: 60px 45px;
+}
+
+.FlxItems {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 45px;
+}
+
+@media (max-width: 768px) {
+  .FlxItems {
+    grid-template-columns: 1fr;
+  }
+
+  .FlxItems__col-1 {
+    width: 10%;
+  }
+  .FlxItems__col-2 {
+    width: 100%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.9);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.backdrop Card {
+  display: block;
+  max-width: 60%;
+  max-height: 80%;
+  margin: 60px auto;
+  box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.8);
+  border: 3px solid white;
 }
